crates/snow-parser/tests/snapshots/parser_tests__literal_string.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"\\\"hello\\\"\")"
---
SOURCE_FILE@0..7
  STRING_EXPR@0..7
    STRING_START@0..1 "\""
    STRING_CONTENT@1..6 "hello"
    STRING_END@6..7 "\""
  EOF@7..7 ""
