crates/snow-parser/tests/snapshots/parser_tests__logical_and_or.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a and b or c\")"
---
SOURCE_FILE@0..8
  BINARY_EXPR@0..8
    BINARY_EXPR@0..5
      NAME_REF@0..1
        IDENT@0..1 "a"
      AND_KW@1..4 "and"
      NAME_REF@4..5
        IDENT@4..5 "b"
    OR_KW@5..7 "or"
    NAME_REF@7..8
      IDENT@7..8 "c"
  EOF@8..8 ""
