crates/snow-parser/tests/snapshots/parser_tests__match_boolean.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"match value do\\n  true -> 1\\n  false -> 0\\nend\")"
---
SOURCE_FILE@0..33
  CASE_EXPR@0..33
    MATCH_KW@0..5 "match"
    NAME_REF@5..10
      IDENT@5..10 "value"
    DO_KW@10..12 "do"
    NEWLINE@12..13 "\n"
    MATCH_ARM@13..20
      LITERAL@13..17
        TRUE_KW@13..17 "true"
      ARROW@17..19 "->"
      LITERAL@19..20
        INT_LITERAL@19..20 "1"
    NEWLINE@20..21 "\n"
    MATCH_ARM@21..29
      LITERAL@21..26
        FALSE_KW@21..26 "false"
      ARROW@26..28 "->"
      LITERAL@28..29
        INT_LITERAL@28..29 "0"
    NEWLINE@29..30 "\n"
    END_KW@30..33 "end"
  EOF@33..33 ""
