crates/snow-parser/tests/snapshots/parser_tests__mixed_postfix.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a.b(c)[d]\")"
---
SOURCE_FILE@0..9
  INDEX_EXPR@0..9
    CALL_EXPR@0..6
      FIELD_ACCESS@0..3
        NAME_REF@0..1
          IDENT@0..1 "a"
        DOT@1..2 "."
        IDENT@2..3 "b"
      ARG_LIST@3..6
        L_PAREN@3..4 "("
        NAME_REF@4..5
          IDENT@4..5 "c"
        R_PAREN@5..6 ")"
    L_BRACKET@6..7 "["
    NAME_REF@7..8
      IDENT@7..8 "d"
    R_BRACKET@8..9 "]"
  EOF@9..9 ""
