crates/snow-parser/tests/snapshots/parser_tests__module_nested.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"module Outer do\\n  module Inner do\\n  end\\nend\")"
---
SOURCE_FILE@0..35
  MODULE_DEF@0..35
    MODULE_KW@0..6 "module"
    NAME@6..11
      IDENT@6..11 "Outer"
    DO_KW@11..13 "do"
    BLOCK@13..32
      NEWLINE@13..14 "\n"
      MODULE_DEF@14..31
        MODULE_KW@14..20 "module"
        NAME@20..25
          IDENT@20..25 "Inner"
        DO_KW@25..27 "do"
        BLOCK@27..28
          NEWLINE@27..28 "\n"
        END_KW@28..31 "end"
      NEWLINE@31..32 "\n"
    END_KW@32..35 "end"
  EOF@35..35 ""
