crates/snow-parser/tests/snapshots/parser_tests__module_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"module Math do\\n  pub fn add(x, y) do\\n    x + y\\n  end\\nend\")"
---
SOURCE_FILE@0..40
  MODULE_DEF@0..40
    MODULE_KW@0..6 "module"
    NAME@6..10
      IDENT@6..10 "Math"
    DO_KW@10..12 "do"
    BLOCK@12..37
      NEWLINE@12..13 "\n"
      FN_DEF@13..36
        VISIBILITY@13..16
          PUB_KW@13..16 "pub"
        FN_KW@16..18 "fn"
        NAME@18..21
          IDENT@18..21 "add"
        PARAM_LIST@21..26
          L_PAREN@21..22 "("
          PARAM@22..23
            IDENT@22..23 "x"
          COMMA@23..24 ","
          PARAM@24..25
            IDENT@24..25 "y"
          R_PAREN@25..26 ")"
        DO_KW@26..28 "do"
        BLOCK@28..33
          NEWLINE@28..29 "\n"
          BINARY_EXPR@29..32
            NAME_REF@29..30
              IDENT@29..30 "x"
            PLUS@30..31 "+"
            NAME_REF@31..32
              IDENT@31..32 "y"
          NEWLINE@32..33 "\n"
        END_KW@33..36 "end"
      NEWLINE@36..37 "\n"
    END_KW@37..40 "end"
  EOF@40..40 ""
