crates/snow-parser/tests/snapshots/parser_tests__modulo_operator.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a % b\")"
---
SOURCE_FILE@0..3
  BINARY_EXPR@0..3
    NAME_REF@0..1
      IDENT@0..1 "a"
    PERCENT@1..2 "%"
    NAME_REF@2..3
      IDENT@2..3 "b"
  EOF@3..3 ""
