crates/snow-parser/tests/snapshots/parser_tests__newlines_inside_parens_ignored.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"foo(\\n  1,\\n  2\\n)\")"
---
SOURCE_FILE@0..11
  CALL_EXPR@0..11
    NAME_REF@0..3
      IDENT@0..3 "foo"
    ARG_LIST@3..11
      L_PAREN@3..4 "("
      LITERAL@4..6
        NEWLINE@4..5 "\n"
        INT_LITERAL@5..6 "1"
      COMMA@6..7 ","
      LITERAL@7..9
        NEWLINE@7..8 "\n"
        INT_LITERAL@8..9 "2"
      NEWLINE@9..10 "\n"
      R_PAREN@10..11 ")"
  EOF@11..11 ""
