crates/snow-parser/tests/snapshots/parser_tests__option_sugar_in_type.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn foo(x :: Int?) do\\n  x\\nend\")"
---
SOURCE_FILE@0..22
  FN_DEF@0..22
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "foo"
    PARAM_LIST@5..14
      L_PAREN@5..6 "("
      PARAM@6..13
        IDENT@6..7 "x"
        TYPE_ANNOTATION@7..13
          COLON_COLON@7..9 "::"
          IDENT@9..12 "Int"
          QUESTION@12..13 "?"
      R_PAREN@13..14 ")"
    DO_KW@14..16 "do"
    BLOCK@16..19
      NEWLINE@16..17 "\n"
      NAME_REF@17..18
        IDENT@17..18 "x"
      NEWLINE@18..19 "\n"
    END_KW@19..22 "end"
  EOF@22..22 ""
